Mon Jun 17 20:53:21 2013  Tanaka Akira  <akr@fsij.org>

	* loadpath.c (RUBY_REVISION): Defined to suppress revision.h
	  inclusion actually.  r41352 removes the dependency.

Mon Jun 17 18:15:57 2013  Benoit Daloze  <eregontp@gmail.com>

	* ext/objspace/objspace.c: let rdoc know about objspace methods.
	  Specify 'objspace' should be required. See #8537.

Mon Jun 17 17:44:31 2013  Benoit Daloze  <eregontp@gmail.com>

	* gc.c (ObjectSpace): is a module not a class.

	* ext/objspace/objspace.c: try to include overview in rdoc,
	  see #8537.

Mon Jun 17 17:38:24 2013  Benoit Daloze  <eregontp@gmail.com>

	* gc.c: fix example of ObjectSpace.define_finalizer in overview

Mon Jun 17 16:59:53 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tkutil/tkutil.c: use rb_sprintf(), rb_id2str(), and
	  rb_intern_str() instead of rb_intern() and RSTRING_PTR() with
	  RB_GC_GUARD(), to prevent temporary objects from GC.
	  [ruby-core:39000] [Bug #5199]

Mon Jun 17 14:27:54 2013  Zachary Scott  <zachary@zacharyscott.net>

	* vm_backtrace.c: Update rdoc for Backtrace#label with @_ko1

Mon Jun 17 13:04:01 2013  Akinori MUSHA  <knu@iDaemons.org>

	* tool/ifchange (until): Fix the condition, although harmless in
	  this case.

Mon Jun 17 11:50:29 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_maybe): added. check `is_pointer_to_heap()' and
	  type is not T_ZOMBIE.

	* gc.c: use `gc_mark_maybe()'. T_ZOMBIE objects should not be pushed
	  to the mark stack.

Mon Jun 17 07:56:24 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_small_lshift): Renamed from bdigs_small_lshift.
	  (bary_small_rshift): Renamed from bdigs_small_rshift.

Mon Jun 17 07:38:48 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (absint_numwords_bytes): Removed.
	  (rb_absint_numwords): Don't call absint_numwords_bytes.

Sun Jun 16 23:14:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BARY_ADD): New macro.
	  (BARY_SUB): Ditto.
	  (BARY_MUL): Ditto.
	  (BARY_DIVMOD): Ditto.
	  (BARY_ZERO_P): Ditto.